# Retention-Guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  sample_hr_data.csv
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/retention_guard/: __init__.py  data.py  model.py  pipeline.py
