[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retention-guard"
version = "0.1.0"
description = "Open-source HR attrition risk scoring MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas==2.2.3",
  "numpy==2.1.3",
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
  "streamlit==1.39.0",
  "plotly==5.24.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
